--- a/style.css
+++ b/style.css
@@ -9,14 +9,29 @@
 body {
     font-family: "Lexend Deca";
     color: #fff ;
-    background-color: #E38826;
 }
 
 .container {
-    width: 237px;
-    height: 376px;
-    padding: 0px 62px;
-    margin: 300px auto;  
+    display: flex;
+    height: 100vh;
+}
+
+.box {
+    width: 50%;
+}
+
+.content {
+    max-width: 210px;
+    margin: 331px auto;
+    padding: 10px;
+}
+
+.bg-orange {
+    background-color: #E38826;
+}
+
+.bg-blue {
+    background-color: #006970;
 }
 
 .header {
@@ -25,28 +40,56 @@ body {
     height: 60px;
     font-weight: 400;
     size: 30px;
-    padding: 10px;
+    padding: 10px 0px;
 }
 
 .text {
-    width: 217px;
+    max-width: 217px;
     font-size: 15px;
     font-weight: 400;
     line-height: 18.75px;
-    padding: 10px;
     margin-bottom: 24px;
 }
 
 .btn {
     display: block;
-    background-color: #fff;
-    color: #E38826;
+    background-color: inherit;
+    color: #ffffff;
     font-size: 15px;
     font-weight: 400;
-    width: 143px;
+    max-width: 143px;
     height: 49px;
     padding: 15px 30px;
     margin:  auto;
     border: none;
     border-radius: 30px;
+    border: 1px solid;
+}
+
+.btn:hover {
+    background-color: #fff;
+}
+
+.btn-orange:hover {
+ color: #E38826;
+}
+
+.btn-blue:hover {
+    color: #006970;
+}
+
+@media (max-width: 550px) {
+    .container {
+        display: flex;
+        flex-direction: column;
+    }
+    .box {
+        padding-top: 30px;
+        width: 100%;   
+        height: 100%;
+    }
+
+    .content {
+        margin: 20px auto;
+    }
 }
