--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&family=Lexend+Deca:wght@100..900&display=swap');
 
+:root {
+    --orange: #E38826;
+    --blue: #006970;
+    --white: #fff;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -8,88 +14,83 @@
 
 body {
     font-family: "Lexend Deca";
-    color: #fff ;
+    color: var(--white);
 }
 
 .container {
     display: flex;
-    height: 100vh;
+    flex-direction: column;  
 }
 
 .box {
-    width: 50%;
+    display: flex; 
+    width: 100%; 
+    height: 50vh;
 }
 
 .content {
-    max-width: 210px;
-    margin: 331px auto;
-    padding: 10px;
+    margin: auto;
 }
 
 .bg-orange {
-    background-color: #E38826;
+    background-color: var(--orange);
 }
 
 .bg-blue {
-    background-color: #006970;
+    background-color: var(--blue);
 }
 
 .header {
     font-family: "Big Shoulders Display", sans-serif;
-    width: 73px;
-    height: 60px;
+    width: 4.5rem;
+    height: 3.7rem;
     font-weight: 400;
-    size: 30px;
-    padding: 10px 0px;
+    font-size: 1.8rem;
+    padding: 0.5rem;
 }
 
 .text {
-    max-width: 217px;
-    font-size: 15px;
+    max-width: 13rem;
+    font-size: 1rem;
     font-weight: 400;
-    line-height: 18.75px;
-    margin-bottom: 24px;
+    line-height: 1rem;
+    margin-bottom: 1.5rem;
 }
 
 .btn {
     display: block;
     background-color: inherit;
-    color: #ffffff;
-    font-size: 15px;
+    color: var(--white);
+    font-size: 1rem;
     font-weight: 400;
-    max-width: 143px;
-    height: 49px;
-    padding: 15px 30px;
-    margin:  auto;
+    max-width: 8rem;
+    height: 3rem;
+    padding: 0.2rem 1.3rem;
+    margin: auto;
     border: none;
-    border-radius: 30px;
+    border-radius: 1.8rem;
     border: 1px solid;
 }
 
 .btn:hover {
-    background-color: #fff;
+    background-color: var(--white);
 }
 
 .btn-orange:hover {
- color: #E38826;
+    color: var(--orange);
 }
 
 .btn-blue:hover {
-    color: #006970;
+    color: var(--blue);
 }
 
-@media (max-width: 550px) {
-    .container {
-        display: flex;
-        flex-direction: column;
-    }
-    .box {
-        padding-top: 30px;
-        width: 100%;   
-        height: 100%;
-    }
 
-    .content {
-        margin: 20px auto;
+@media (min-width: 34rem) {
+    .container {
+        flex-direction: row; 
+    }
+    
+    .box { 
+        height: 100vh;
     }
 }
